// Vitest Snapshot v1

exports[`<PaginationPostsExample /> > check back button works 1`] = `
<DocumentFragment>
  <div
    class="undefined flex flex-col mx-auto min-h-screen"
  >
    <nav>
      <ul
        class="undefined flex flex-row flex-wrap justify-between list-none mx-auto max-w-screen-sm"
      >
        <li>
          <a
            class="undefined text-black no-underline"
            href="/"
          >
            🏠 Home
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/posts"
          >
            📰 Posts
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/pages"
          >
            📑 Pages
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/examples"
          >
            ⚛️ Examples
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <div>
        <section>
          <h1
            class="undefined font-extrabold my-10 mx-0"
          >
            Pagination example
          </h1>
          <div>
            <span
              class="undefined text-gray-700 font-semibold"
            >
              Page 1/10
            </span>
            <section>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Ut culpa iste voluptas consequatur
                </h2>
                <div>
                  <p>
                    Consequuntur omnis assumenda voluptate aut quam. Dolorem aut aspernatur voluptas delectus. Commodi quia veniam voluptatem vitae rem Assumenda qui non in et facere tempora Corrupti Ut inventore id voluptates sed Mollitia magnam nihil numquam nostrum Nostrum et praesentium ullam ut accusamus Velit eos perferendis error fuga in necessitatibus Nostrum laboriosam iste Sint itaque est facilis […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Totam aliquam recusandae autem ipsa
                </h2>
                <div>
                  <p>
                    Ipsam molestias est omnis.
                  </p>
                  

                  <p>
                    Rerum quo quibusdam.
                  </p>
                  

                  <p>
                    Dolor ea eum.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Et ipsa accusantium voluptatem nostrum maiores
                </h2>
                <div>
                  <p>
                    Perspiciatis ut modi et.
                  </p>
                  

                  <p>
                    Consequatur recusandae veniam at repellat.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Odio vel voluptas pariatur quas pariatur dicta
                </h2>
                <div>
                  <p>
                    Vel qui.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Quia quos eum assumenda alias quisquam a
                </h2>
                <div>
                  <p>
                    Molestias ab voluptate voluptas alias nesciunt commodi. Qui beatae et vel dolore in blanditiis Voluptatem est rerum odit Rerum esse magnam sapiente Ut sunt tempore et expedita nihil et ut Tempore nihil et tenetur Asperiores Deserunt quidem omnis minus commodi molestiae et quam Nulla ab quia voluptatem et officiis ullam quo. Aliquam eum enim aliquam […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Rerum et consectetur accusamus quod
                </h2>
                <div>
                  <p>
                    Aut quod commodi velit.
                  </p>
                  

                  <p>
                    Unde quaerat at.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Neque doloremque dolor et nesciunt
                </h2>
                <div>
                  <p>
                    Commodi omnis voluptatem expedita.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Voluptatum pariatur qui aut magni et sequi
                </h2>
                <div>
                  <p>
                    Et laborum consequatur Dolores fugiat et voluptatem nesciunt consequatur pariatur. incidunt voluptate officiis nisi. Laboriosam alias nesciunt eius odit. Corrupti in est. Amet sed qui omnis enim facere accusantium officia. Laudantium quo quo alias. Quasi quasi dolorum est. Architecto accusamus eius ipsa. Aliquid iure et repellendus quibusdam. veritatis totam animi quis. aperiam doloremque architecto et. […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Iusto voluptatem sed voluptas pariatur sequi
                </h2>
                <div>
                  <p>
                    Tenetur blanditiis est perferendis.
                  </p>
                  

                  <p>
                    Sint quos vel.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Aut iusto dolores suscipit
                </h2>
                <div>
                  <p>
                    Ipsa occaecati eligendi.
                  </p>
                  

                  <p>
                    Nobis minus rerum voluptates molestiae.
                  </p>
                  

                </div>
              </article>
            </section>
            <div>
              <nav
                aria-label="Pagination Navigation"
                role="navigation"
              >
                <ul
                  class="undefined self-start flex flex-row justify-center list-none mb-0 mx-auto mt-auto p-0"
                  data-testid="link-wrapper true false"
                >
                  <li>
                    <a
                      aria-label="Go to Previous Page"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/1"
                      id="back-btn"
                      state="[object Object]"
                    >
                      &lt;
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="true"
                      aria-label="Current Page, Page 1"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/1"
                      state="[object Object]"
                    >
                      1
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 2"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/2"
                      state="[object Object]"
                    >
                      2
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 3"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/3"
                      state="[object Object]"
                    >
                      3
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 4"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/4"
                      state="[object Object]"
                    >
                      4
                    </a>
                  </li>
                  <li>
                    <button
                      aria-label="Expand Hidden Buttons"
                    >
                      ...
                    </button>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 8"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/8"
                      state="[object Object]"
                    >
                      8
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 9"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/9"
                      state="[object Object]"
                    >
                      9
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 10"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/10"
                      state="[object Object]"
                    >
                      10
                    </a>
                  </li>
                  <li>
                    <a
                      aria-label="Go to Next Page"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/2"
                      id="next-btn"
                      state="[object Object]"
                    >
                      &gt;
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </section>
      </div>
    </main>
    <footer
      class="undefined bg-black flex flex-col justify-self-end mt-12"
    >
      <nav
        class="undefined flex flex-col mx-auto"
      >
        <ul
          class="undefined mt-4"
        />
      </nav>
      <div
        class="undefined text-white my-4 mx-auto p-2"
      >
        <span>
          © 2023 Built with 
          <a
            class="undefined underline"
            href="https://www.gatsbyjs.com"
          >
            Gatsby
          </a>
           and 
          <a
            class="undefined underline"
            href="https://wordpress.org/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<PaginationPostsExample /> > check next button works 1`] = `
<DocumentFragment>
  <div
    class="undefined flex flex-col mx-auto min-h-screen"
  >
    <nav>
      <ul
        class="undefined flex flex-row flex-wrap justify-between list-none mx-auto max-w-screen-sm"
      >
        <li>
          <a
            class="undefined text-black no-underline"
            href="/"
          >
            🏠 Home
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/posts"
          >
            📰 Posts
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/pages"
          >
            📑 Pages
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/examples"
          >
            ⚛️ Examples
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <div>
        <section>
          <h1
            class="undefined font-extrabold my-10 mx-0"
          >
            Pagination example
          </h1>
          <div>
            <span
              class="undefined text-gray-700 font-semibold"
            >
              Page 2/10
            </span>
            <section>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  At voluptatum est numquam qui nulla
                </h2>
                <div>
                  <p>
                    Sint laboriosam quibusdam veniam deserunt explicabo modi consequatur. Ducimus ut hic et et. Ullam ipsa numquam nesciunt sunt cupiditate Harum beatae laboriosam quas Corrupti sit temporibus modi Aut sed molestiae velit qui quae animi Distinctio et Repudiandae eum consectetur expedita nam aut quis. Et excepturi architecto corporis repudiandae ut. Veniam dignissimos velit et aut. Omnis […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Consequatur ut omnis omnis officiis eos
                </h2>
                <div>
                  <p>
                    Aperiam non rerum et at.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Dolorum illo dolor quaerat illo molestias reprehenderit
                </h2>
                <div>
                  <p>
                    Voluptates et distinctio ut veritatis blanditiis quasi quibusdam Voluptas recusandae et Atque illo eos inventore architecto Sapiente omnis quia qui Voluptatem minus Exercitationem vero Laborum Rerum iusto Non omnis temporibus et
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Sequi unde consequatur omnis sunt nihil
                </h2>
                <div>
                  <p>
                    Beatae ea dolore.
                  </p>
                  

                  <p>
                    Vitae sint ut commodi.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Dolorum consequuntur voluptatem id mollitia fugit
                </h2>
                <div>
                  <p>
                    Aut qui ipsam sunt voluptas voluptas. Maxime similique sit animi blanditiis nesciunt a Quisquam sint numquam hic deleniti. Dolorem inventore qui natus aut. Qui nostrum dicta quo. Aut eveniet quod magnam quidem sapiente ut quia Et minus ipsam beatae laborum provident sed Et eum laboriosam ullam consequatur Voluptatem quam Quia molestiae similique est reiciendis sapiente […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Rerum earum repellendus dolorem
                </h2>
                <div>
                  <p>
                    Quia nisi nobis molestias corporis deleniti omnis id optio. Maiores mollitia quia ratione et expedita error Ut sed fugit corporis dicta aut. Saepe reiciendis non magnam architecto aliquam. quae saepe facilis explicabo optio. Qui eum voluptas dolores voluptatem eligendi. Commodi officia iste. quia earum quo esse Vel soluta sequi sed ratione ullam. Facilis dolor atque […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Culpa quia perferendis beatae
                </h2>
                <div>
                  <p>
                    Qui atque dolores quo suscipit dolores. Nisi adipisci omnis quia. Minima dolores qui et magni itaque Dicta molestiae error harum qui Officia veniam Natus voluptates inventore dicta sit Quia fugiat consequatur nobis. ex placeat dolor ipsum impedit. Voluptatem enim tempora culpa. Minima esse quisquam commodi voluptatem id. qui tempora ut sed cupiditate qui. Laudantium iure […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Fuga occaecati provident sint quia est
                </h2>
                <div>
                  <p>
                    In inventore perspiciatis aut.
                  </p>
                  

                  <p>
                    Est velit consequatur.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Quibusdam veniam alias quo
                </h2>
                <div>
                  <p>
                    Doloribus exercitationem ut.
                  </p>
                  

                  <p>
                    Aut ipsa ea eveniet nihil.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Eligendi possimus quia quas dolore suscipit
                </h2>
                <div>
                  <p>
                    Nisi illo voluptates est voluptatibus eligendi Quia ea blanditiis ullam deserunt labore sit Ut culpa dolorem est qui rerum Omnis Aut quia qui Quod deleniti Sapiente sit fuga quo numquam voluptatibus Quas ducimus ipsum aperiam aut. Voluptatem dolor error ut aut praesentium fugiat. Dolorum rerum eveniet corrupti molestiae dolorem Esse eum qui illum provident Modi […]
                  </p>
                  

                </div>
              </article>
            </section>
            <div>
              <nav
                aria-label="Pagination Navigation"
                role="navigation"
              >
                <ul
                  class="undefined self-start flex flex-row justify-center list-none mb-0 mx-auto mt-auto p-0"
                  data-testid="link-wrapper true true"
                >
                  <li>
                    <a
                      aria-label="Go to Previous Page"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/1"
                      id="back-btn"
                      state="[object Object]"
                    >
                      &lt;
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 1"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/1"
                      state="[object Object]"
                    >
                      1
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="true"
                      aria-label="Current Page, Page 2"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/2"
                      state="[object Object]"
                    >
                      2
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 3"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/3"
                      state="[object Object]"
                    >
                      3
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 4"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/4"
                      state="[object Object]"
                    >
                      4
                    </a>
                  </li>
                  <li>
                    <button
                      aria-label="Expand Hidden Buttons"
                    >
                      ...
                    </button>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 8"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/8"
                      state="[object Object]"
                    >
                      8
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 9"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/9"
                      state="[object Object]"
                    >
                      9
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 10"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/10"
                      state="[object Object]"
                    >
                      10
                    </a>
                  </li>
                  <li>
                    <a
                      aria-label="Go to Next Page"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/3"
                      id="next-btn"
                      state="[object Object]"
                    >
                      &gt;
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </section>
      </div>
    </main>
    <footer
      class="undefined bg-black flex flex-col justify-self-end mt-12"
    >
      <nav
        class="undefined flex flex-col mx-auto"
      >
        <ul
          class="undefined mt-4"
        />
      </nav>
      <div
        class="undefined text-white my-4 mx-auto p-2"
      >
        <span>
          © 2023 Built with 
          <a
            class="undefined underline"
            href="https://www.gatsbyjs.com"
          >
            Gatsby
          </a>
           and 
          <a
            class="undefined underline"
            href="https://wordpress.org/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<PaginationPostsExample /> > should render the paginated data 1`] = `
<DocumentFragment>
  <div
    class="undefined flex flex-col mx-auto min-h-screen"
  >
    <nav>
      <ul
        class="undefined flex flex-row flex-wrap justify-between list-none mx-auto max-w-screen-sm"
      >
        <li>
          <a
            class="undefined text-black no-underline"
            href="/"
          >
            🏠 Home
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/posts"
          >
            📰 Posts
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/pages"
          >
            📑 Pages
          </a>
        </li>
        <li>
          <a
            class="undefined text-black no-underline"
            href="/examples"
          >
            ⚛️ Examples
          </a>
        </li>
      </ul>
    </nav>
    <main>
      <div>
        <section>
          <h1
            class="undefined font-extrabold my-10 mx-0"
          >
            Pagination example
          </h1>
          <div>
            <span
              class="undefined text-gray-700 font-semibold"
            >
              Page 1/10
            </span>
            <section>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Ut culpa iste voluptas consequatur
                </h2>
                <div>
                  <p>
                    Consequuntur omnis assumenda voluptate aut quam. Dolorem aut aspernatur voluptas delectus. Commodi quia veniam voluptatem vitae rem Assumenda qui non in et facere tempora Corrupti Ut inventore id voluptates sed Mollitia magnam nihil numquam nostrum Nostrum et praesentium ullam ut accusamus Velit eos perferendis error fuga in necessitatibus Nostrum laboriosam iste Sint itaque est facilis […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Totam aliquam recusandae autem ipsa
                </h2>
                <div>
                  <p>
                    Ipsam molestias est omnis.
                  </p>
                  

                  <p>
                    Rerum quo quibusdam.
                  </p>
                  

                  <p>
                    Dolor ea eum.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Et ipsa accusantium voluptatem nostrum maiores
                </h2>
                <div>
                  <p>
                    Perspiciatis ut modi et.
                  </p>
                  

                  <p>
                    Consequatur recusandae veniam at repellat.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Odio vel voluptas pariatur quas pariatur dicta
                </h2>
                <div>
                  <p>
                    Vel qui.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Quia quos eum assumenda alias quisquam a
                </h2>
                <div>
                  <p>
                    Molestias ab voluptate voluptas alias nesciunt commodi. Qui beatae et vel dolore in blanditiis Voluptatem est rerum odit Rerum esse magnam sapiente Ut sunt tempore et expedita nihil et ut Tempore nihil et tenetur Asperiores Deserunt quidem omnis minus commodi molestiae et quam Nulla ab quia voluptatem et officiis ullam quo. Aliquam eum enim aliquam […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Rerum et consectetur accusamus quod
                </h2>
                <div>
                  <p>
                    Aut quod commodi velit.
                  </p>
                  

                  <p>
                    Unde quaerat at.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Neque doloremque dolor et nesciunt
                </h2>
                <div>
                  <p>
                    Commodi omnis voluptatem expedita.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Voluptatum pariatur qui aut magni et sequi
                </h2>
                <div>
                  <p>
                    Et laborum consequatur Dolores fugiat et voluptatem nesciunt consequatur pariatur. incidunt voluptate officiis nisi. Laboriosam alias nesciunt eius odit. Corrupti in est. Amet sed qui omnis enim facere accusantium officia. Laudantium quo quo alias. Quasi quasi dolorum est. Architecto accusamus eius ipsa. Aliquid iure et repellendus quibusdam. veritatis totam animi quis. aperiam doloremque architecto et. […]
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Iusto voluptatem sed voluptas pariatur sequi
                </h2>
                <div>
                  <p>
                    Tenetur blanditiis est perferendis.
                  </p>
                  

                  <p>
                    Sint quos vel.
                  </p>
                  

                </div>
              </article>
              <article
                class="undefined flex flex-col leading-8 mb-10 p-3"
              >
                <h2
                  class="undefined font-bold mb-2"
                >
                  Aut iusto dolores suscipit
                </h2>
                <div>
                  <p>
                    Ipsa occaecati eligendi.
                  </p>
                  

                  <p>
                    Nobis minus rerum voluptates molestiae.
                  </p>
                  

                </div>
              </article>
            </section>
            <div>
              <nav
                aria-label="Pagination Navigation"
                role="navigation"
              >
                <ul
                  class="undefined self-start flex flex-row justify-center list-none mb-0 mx-auto mt-auto p-0"
                  data-testid="link-wrapper true false"
                >
                  <li>
                    <a
                      aria-label="Go to Previous Page"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/1"
                      id="back-btn"
                      state="[object Object]"
                    >
                      &lt;
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="true"
                      aria-label="Current Page, Page 1"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/1"
                      state="[object Object]"
                    >
                      1
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 2"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/2"
                      state="[object Object]"
                    >
                      2
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 3"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/3"
                      state="[object Object]"
                    >
                      3
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 4"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/4"
                      state="[object Object]"
                    >
                      4
                    </a>
                  </li>
                  <li>
                    <button
                      aria-label="Expand Hidden Buttons"
                    >
                      ...
                    </button>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 8"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/8"
                      state="[object Object]"
                    >
                      8
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 9"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/9"
                      state="[object Object]"
                    >
                      9
                    </a>
                  </li>
                  <li>
                    <a
                      aria-current="false"
                      aria-label="Go to Page 10"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/10"
                      state="[object Object]"
                    >
                      10
                    </a>
                  </li>
                  <li>
                    <a
                      aria-label="Go to Next Page"
                      class="undefined bg-white border-black text-black flex flex-col h-16 justify-center text-center no-underline w-12"
                      href="/examples/pagination/2"
                      id="next-btn"
                      state="[object Object]"
                    >
                      &gt;
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </section>
      </div>
    </main>
    <footer
      class="undefined bg-black flex flex-col justify-self-end mt-12"
    >
      <nav
        class="undefined flex flex-col mx-auto"
      >
        <ul
          class="undefined mt-4"
        />
      </nav>
      <div
        class="undefined text-white my-4 mx-auto p-2"
      >
        <span>
          © 2023 Built with 
          <a
            class="undefined underline"
            href="https://www.gatsbyjs.com"
          >
            Gatsby
          </a>
           and 
          <a
            class="undefined underline"
            href="https://wordpress.org/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
